--- a/src/assets/scss/core/components/_global.scss
+++ b/src/assets/scss/core/components/_global.scss
@@ -1,8 +1,7 @@
 // Reset
 @import 'reset';
 
-// Fonts & Typography
-// @import 'fonts';
+// Typography
 @import 'typography';
 
 // Container & Grid
