--- a/src/assets/scss/core/components/_reset.scss
+++ b/src/assets/scss/core/components/_reset.scss
@@ -6,6 +6,11 @@
 	}
 }
 
+html, body {
+	margin: 0;
+	padding: 0;
+}
+
 // === User Selection === //
 ::selection {
 	background-color: cd-palette($cd-background, 2010);
