--- a/src/app/_global.scss
+++ b/src/app/_global.scss
@@ -1,8 +1,8 @@
-// Game component
-@import 'game.component';
+// app
+@import 'app';
 
-// Board component
-@import 'board.component';
+// board
+@import 'board';
 
-// Square component
-@import 'square.component';
+// square
+@import 'square';
