--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -83,7 +83,7 @@
 		display: block;
 		flex-direction: unset;
 		justify-content: unset;
-		margin: 0;
+		margin: 0 -15px;
 
 		.cd-menu {
 			position: static;
