--- a/src/assets/scss/app/_global.scss
+++ b/src/assets/scss/app/_global.scss
@@ -1,11 +1,11 @@
-// Colors
-@import 'colors';
+// base
+@import 'base/global';
 
-// Browsers
+// browsers
 @import 'browsers/global';
 
-// Custom
+// custom
 @import 'custom/global';
 
-// General
+// general
 @import 'general';
