--- a/src/assets/scss/app/base/_colors.scss
+++ b/src/assets/scss/app/base/_colors.scss
@@ -1,4 +1,4 @@
-// Color
+// color
 $cd-color: (
 	1000: #000000,
 	1001: #ffffff,
@@ -21,10 +21,11 @@ $cd-color: (
 	1018: #b9b7b7,
 	1019: #f44336,
 	1020: #003f75,
-	1021: #013463
+	1021: #013463,
+	1022: #f3eded
 );
 
-// Background Color
+// background color
 $cd-background: (
 	2000: #000000,
 	2001: #ffffff,
@@ -47,10 +48,11 @@ $cd-background: (
 	2018: #b9b7b7,
 	2019: #f44336,
 	2020: #003f75,
-	2021: #013463
+	2021: #013463,
+	2022: #f3eded
 );
 
-// Border
+// border
 $cd-border: (
 	3000: #000000,
 	3001: #ffffff,
@@ -73,10 +75,11 @@ $cd-border: (
 	3018: #b9b7b7,
 	3019: #f44336,
 	3020: #003f75,
-	3021: #013463
+	3021: #013463,
+	3022: #f3eded
 );
 
-// Box Shadow
+// box shadow
 $cd-shadow: (
 	4000: #000000,
 	4001: #ffffff,
@@ -99,5 +102,6 @@ $cd-shadow: (
 	4018: #b9b7b7,
 	4019: #f44336,
 	4020: #003f75,
-	4021: #013463
+	4021: #013463,
+	4022: #f3eded
 );
