--- a/src/app/square.scss
+++ b/src/app/square.scss
@@ -1,14 +1,11 @@
 .cd-square {
 	background-color: cd-palette($cd-background, 2001);
 	border: 1px solid cd-palette($cd-border, 3003);
-	box-shadow: 1px 1px 1px #f3eded;
+	box-shadow: 1px 1px 1px cd-palette($cd-shadow, 4022);
 	float: left;
-	font-size: 24px;
+	font-size: cd-fontSize(s24, $cd-fontSize);
 	font-weight: bold;
 	height: 50px;
-	line-height: 50px;
-	margin-right: -1px;
-	margin-top: -1px;
 	padding: 0;
 	text-align: center;
 	width: 50px;
