--- a/src/assets/scss/app/_global.scss
+++ b/src/assets/scss/app/_global.scss
@@ -1,11 +1,11 @@
-// base
-@import 'base/global';
+// colors
+@import 'colors';
 
 // browsers
-@import 'browsers/global';
+@import 'firefox';
 
-// custom
-@import 'custom/global';
+// custom styles
+@import 'custom-styles';
 
 // general
 @import 'general';
