--- a/src/assets/scss/app/colors.scss
+++ b/src/assets/scss/app/colors.scss
@@ -2,7 +2,7 @@
 $cd-color: (
 	1000: #000000,
 	1001: #ffffff,
-	1002: #f8f8f8,
+	1002: #f2f5fa,
 	1003: #efefef,
 	1004: #e4e4e4,
 	1005: #e2e2e2,
@@ -29,7 +29,7 @@ $cd-color: (
 $cd-background: (
 	2000: #000000,
 	2001: #ffffff,
-	2002: #f8f8f8,
+	2002: #f2f5fa,
 	2003: #efefef,
 	2004: #e4e4e4,
 	2005: #e2e2e2,
@@ -56,7 +56,7 @@ $cd-background: (
 $cd-border: (
 	3000: #000000,
 	3001: #ffffff,
-	3002: #f8f8f8,
+	3002: #f2f5fa,
 	3003: #efefef,
 	3004: #e4e4e4,
 	3005: #e2e2e2,
@@ -83,7 +83,7 @@ $cd-border: (
 $cd-shadow: (
 	4000: #000000,
 	4001: #ffffff,
-	4002: #f8f8f8,
+	4002: #f2f5fa,
 	4003: #efefef,
 	4004: #e4e4e4,
 	4005: #e2e2e2,
